fixed the text overflow issue of units component

--- a/packages/webapp/src/components/Form/Unit/unit.module.scss
+++ b/packages/webapp/src/components/Form/Unit/unit.module.scss
@@ -76,7 +76,6 @@
 .labelContainer {
   display: flex;
   justify-content: space-between;
-  height: 20px;
   position: relative;
 }
 
